# CraneEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.VSCodeCounter/2021-10-09_21-36-08/: details.md  results.csv  results.md  results.txt
CraneEngine/: Actor.cpp  Actor.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  CraneEngine.cpp  CraneEngine.hpp  Dummy.cpp  Engine.cpp  Engine.hpp  Utils.cpp  Utils.hpp
CraneEngine/Module/BasicActor/: CMakeLists.txt  ChessboardActor.cpp  ChessboardActor.hpp
CraneEngine/Module/OceanFFT/: Ocean.cpp  Ocean.hpp
CraneEngine/Physics/: BVH.cpp  BVH.hpp  Collision.cpp  Collision.hpp  Constraint.cpp  Constraint.hpp  Intersect.cpp  Intersect.hpp  PositionBasedDynamics.cpp  PositionBasedDynamics.hpp  Rigidbody.cpp  Rigidbody.hpp
CraneEngine/Render/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Cull.cpp  DataStruct.hpp  Draw.cpp  Dummy.cpp  Dummy.hpp  GlobalAsset.cpp  GlobalPass.cpp  Image.cpp  Image.hpp  Logging.hpp  MaterialSystem.cpp  MaterialSystem.hpp  MeshBase.cpp  MeshBase.hpp  Render.cpp  Render.hpp  RenderableBase.hpp  Swapchain.cpp  Utils.cpp
CraneEngine/Render/ConstructData/: Buffer.hpp  CMakeLists.txt  Image.cpp  MeshBase.cpp  MeshBase.hpp  Transformer.cpp  Transformer.hpp
CraneEngine/Render/ConstructRender/: Actor.cpp  Actor.hpp  CMakeLists.txt  GraphicsPrimitive.cpp  GraphicsPrimitive.hpp  MaterialSystem.cpp  MaterialSystem.hpp
Demo/: CMakeLists.txt
Demo/BASIC/: BASIC.cpp  BASIC.hpp  CMakeLists.txt  main.cpp
Demo/CLOTH/: CLOTH.cpp  CLOTH.hpp  CMakeLists.txt  ClothActor.cpp  ClothActor.hpp  CreateActors.cpp  Skybox.cpp  Skybox.hpp  SoldierActor.cpp  SoldierActor.hpp  main.cpp
Demo/FIREWORK/: FIREWORK.cpp  FIREWORK.hpp  main.cpp
Demo/HAIR/: CMakeLists.txt  CreateActors.cpp  HAIR.cpp  HAIR.hpp  main.cpp
Demo/MINI_GAME/: AI.cpp  Atmosphere.cpp  Atmosphere.hpp  CMakeLists.txt  CreateAssets.cpp  MINI_GAME.cpp  MINI_GAME.hpp  OCEAN.cpp  OCEAN.hpp  Sky.cpp  Sky.hpp  main.cpp  updatePhysics.cpp
Demo/OCEAN/: Boat.cpp  Boat.hpp  CMakeLists.txt  OCEAN.cpp  OCEAN.hpp  UpdateBox.cpp  main.cpp
Demo/POSE/: CMakeLists.txt  CVUtils.cpp  CVUtils.hpp  CharacterActor.cpp  CharacterActor.hpp  CreateAssets.cpp  POSE.cpp  POSE.hpp  POSECV.cpp  SkeletonActor.cpp  SkeletonActor.hpp  main.cpp
Demo/SDL2_BASE/: CMakeLists.txt  SDL2_BASE.cpp  SDL2_BASE.hpp  main.cpp
Demo/SDL2_IMGUI_BASE/: CMakeLists.txt  SDL2_IMGUI_BASE.cpp  SDL2_IMGUI_BASE.hpp  main.cpp
Demo/WAVELETS/: CMakeLists.txt  WAVELETS.cpp  WAVELETS.hpp  WaveletsAmpl.cpp  WaveletsAmpl.hpp  main.cpp
asset-baker/: CMakeLists.txt  asset_main.cpp
assetlib/: CMakeLists.txt  skeleton_asset.cpp  skeleton_asset.hpp  texture_asset.cpp
assets/: hairNURBS.mtl  human.dae
assets_export/: Banner_of_the_Holy_Roman_Emperor_with_haloes.tx  Dragon.mesh  StandardCubeMap.tx  dragon2.mesh  hair.mesh  hairNURBS.mesh  human.mesh  kachujin_g_rosales.pfb  kapal.mesh  stanfordDragon.mesh  teapot.mesh  yume.tx
assets_export/RomanSoldier/: Roman-Soldier.mesh
assets_export/Sponza/glTF/: 1219024358953944284.tx  2051777328469649772.tx  2185409758123873465.tx  2299742237651021498.tx  2374361008830720677.tx  2411100444841994089.tx  2775690330959970771.tx  2969916736137545357.tx  332936164838540657.tx  3371964815757888145.tx  3455394979645218238.tx  3628158980083700836.tx  3827035219084910048.tx  4477655471536070370.tx  4601176305987539675.tx  466164707995436622.tx  4675343432951571524.tx  4871783166746854860.tx  4910669866631290573.tx  4975155472559461469.tx  5061699253647017043.tx  5792855332885324923.tx  5823059166183034438.tx  6047387724914829168.tx  6151467286084645207.tx  6593109234861095314.tx  6667038893015345571.tx  6772804448157695701.tx  7056944414013900257.tx  715093869573992647.tx  7268504077753552595.tx  7441062115984513793.tx  755318871556304029.tx  759203620573749278.tx  7645212358685992005.tx  7815564343179553343.tx  8006627369776289000.tx  8051790464816141987.tx  8114461559286000061.tx  8481240838833932244.tx  (+9 more)
assets_export/Sponza/glTF/Sponza_GLTF/: MAT_0_.mat  MAT_10_.mat  MAT_11_.mat  MAT_12_.mat  MAT_13_.mat  MAT_14_.mat  MAT_15_.mat  MAT_16_.mat  MAT_17_.mat  MAT_18_.mat  MAT_19_.mat  MAT_1_.mat  MAT_20_.mat  MAT_21_.mat  MAT_22_.mat  MAT_23_.mat  MAT_24_.mat  MAT_2_.mat  MAT_3_.mat  MAT_4_.mat  MAT_5_.mat  MAT_6_.mat  MAT_7_.mat  MAT_8_.mat  MAT_9_.mat  MESH_0__PRIM_0.mesh  MESH_0__PRIM_1.mesh  MESH_0__PRIM_10.mesh  MESH_0__PRIM_100.mesh  MESH_0__PRIM_101.mesh  MESH_0__PRIM_102.mesh  MESH_0__PRIM_11.mesh  MESH_0__PRIM_12.mesh  MESH_0__PRIM_13.mesh  MESH_0__PRIM_14.mesh  MESH_0__PRIM_15.mesh  MESH_0__PRIM_16.mesh  MESH_0__PRIM_17.mesh  MESH_0__PRIM_18.mesh  MESH_0__PRIM_19.mesh  (+88 more)
assets_export/Sponza/screenshot/: screenshot.tx
assets_export/kachujin_g_rosales_GLTF/: MAT_0_kachujin_MAT.mat  MESH_0_Kachujin.bones  MESH_0_Kachujin.mesh
shaders/: CMakeLists.txt  background.frag  background.vert  cull.comp  pbr.frag  pbr.vert  phong.frag  phong.vert  sky.frag  sky.vert  yuv420p2rgb.comp
shaders/.VSCodeCounter/2021-10-09_21-34-39/: details.md  results.csv  results.md  results.txt
shaders/ocean/: ampl.comp  ifft2.comp  ocean.frag  ocean.vert  ocean0.vert  sign.comp
shaders/spv/: cull.comp.spv  ocean.frag.spv  ocean.vert.spv  phong.frag.spv  phong.vert.spv  sky.frag.spv  sky.vert.spv
